<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1A222F"
        android:layout_marginBottom="608dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_18"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="9dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img17"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="36dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img20"
            android:layout_marginLeft="277dp"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_7"
            android:layout_marginLeft="310dp"
            android:layout_marginTop="37dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_8"
            android:layout_marginLeft="330dp"
            android:layout_marginTop="1dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:freezesText="true"
            android:text="@string/music_time"
            android:textColor="@color/whit"
            android:textSize="20dp"
            android:textStyle="bold"/>




    </com.google.android.material.bottomnavigation.BottomNavigationView>


    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="291dp"
        android:fontFamily="@font/roboto"
        android:text="@string/Your_favourites"
        android:textColor="@color/whit"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/album_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="320dp"
        android:fontFamily="@font/roboto"
        android:text="@string/recommended_playlists"
        android:textColor="@color/whit"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:background="#1A222F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ImageButton
            android:id="@+id/buttonImg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:onClick="Success"
            android:background="@color/back"
            android:src="@drawable/img" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/roboto"
            android:text="@string/Home"
            android:textColor="@color/yellow"
            android:textSize="14dp" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="171dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/img7" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/img_9" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="171dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/roboto"
            android:text="@string/Explore"
            android:textColor="@color/whit"
            android:textSize="14dp" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/img_10" />

        <ImageView
            android:id="@+id/img5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="302dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/img_11" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/roboto"
            android:text="@string/Library"
            android:textColor="@color/whit"
            android:textSize="14dp" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/album_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="430dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>